--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
+    <p>If you miss the animation effect, you may need to refresh! <a href="https://github.com/mapmeld/sketchcart/">Code</a></p>
     <script type="text/javascript" src="walkway.min.js"></script>
     <script type="text/javascript" src="d3.v3.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
