piece by piece map

--- a/multi.html
+++ b/multi.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Sketchcart Demo</title>
+    <title>Sketchcart Multi Demo</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
     <p>If you miss the animation effect, you may need to refresh! <a href="https://github.com/mapmeld/sketchcart/">Code</a></p>
-    <p><a href="http://mapmeld.github.io/sketchcart/multi.html">Try a map which appears piece by piece!</a></p>
     <script type="text/javascript" src="walkway.min.js"></script>
     <script type="text/javascript" src="d3.v3.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="multi_app.js"></script>
   </body>
 </html>
